[gd_scene load_steps=2 format=3 uid="uid://b3ltlrtc0ys51"]

[ext_resource type="Script" path="res://data/world/kill_area.gd" id="1_3m41d"]

[node name="KillArea" type="Area2D"]
collision_mask = 32768
script = ExtResource("1_3m41d")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.36
one_shot = true

[node name="AnimTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AnimTimer" to="." method="_on_anim_timer_timeout"]
